// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should not render without address 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  />
</div>
`;

exports[`Formatted Address should render address only 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  >
    <span
      class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with normal font 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  >
    <span
      class="max-w-24 flex-auto truncate mr-2 font-normal text-base text-theme-text"
      data-testid="address__wallet-name"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-normal text-base"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet name 1`] = `
<div>
  <div
    class="inline-flex items-center no-ligatures"
  >
    <span
      class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
      data-testid="address__wallet-name"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
      data-testid="address__wallet-address"
    >
      ASuusX…GQ3kqT
    </span>
  </div>
</div>
`;
